# dexsnake

./: LICENSE  README.rst  pyproject.toml
dexsnake/: __init__.py
dexsnake/uniswap_v2/: __init__.py  config.py  factory.py  pair.py  router.py
dexsnake/uniswap_v2/abi/: UniswapV2Factory.json  UniswapV2Pair.json  UniswapV2Router02.json
dexsnake/uniswap_v3/: __init__.py  config.py  factory.py  pool.py  router.py
dexsnake/uniswap_v3/abi/: __init__.py
dexsnake/utils/: __init__.py  erc20_token.py
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst  reference.rst  tutorials.rst  uniswap_v2_tutorial.ipynb  uniswap_v3_tutorial.ipynb
